--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,12 +6,16 @@ en:
       boolean: "must be a boolean"
       date_time_iso8601: "must be a valid iso8601 date time"
       date_time_posix: "must be a valid posix timestamps"
+      hash: "must be a map"
+      hash_key: "invalid key (%{key}): %{error}"
+      hash_value: "invalid value at key (%{key}): %{error}"
       inclusion: "must be one of: %{values}"
       integer: "must be an integer"
       min: "must be bigger than or equal to %{min}"
       max: "must be smaller than or equal to %{max}"
       negative: "must not be negative"
       positive: "must not be positive"
+      literal: "must be %{value}"
       string: "must be a string"
       empty: "must not be empty"
       minlength: "length must be greater than or equal to %{minlength}"
