--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
       hash: "must be a map"
       hash_key: "invalid key (%{key}): %{error}"
       hash_value: "invalid value at key (%{key}): %{error}"
-      inclusion: "must be one of: %{values}"
+      enum: "must be one of: %{values}"
       integer: "must be an integer"
       min: "must be bigger than or equal to %{min}"
       max: "must be smaller than or equal to %{max}"
