inline error translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,21 +6,21 @@ en:
       bigdecimal: "must be a string-encoded decimal number"
       boolean: "must be a boolean"
       date_time_iso8601: "must be a valid iso8601 date time"
-      date_time_posix: "must be a valid posix timestamps"
-      hash: "must be a map"
+      date_time_posix: "must be a valid posix timestamp"
+      hash: "must be an object"
       hash_key: "invalid key (%{key}): %{error}"
       hash_value: "invalid value at key (%{key}): %{error}"
-      enum: "must be one of: %{values}"
+      enum: "must be one of: %{allowed_values}"
       integer: "must be an integer"
-      min: "must be bigger than or equal to %{min}"
-      max: "must be smaller than or equal to %{max}"
-      negative: "must not be negative"
-      positive: "must not be positive"
+      min: "must be at least %{min}"
+      max: "must be at most %{max}"
+      not_negative: "must not be negative"
+      not_positive: "must not be positive"
       literal: "must be %{value}"
       string: "must be a string"
       empty: "must not be empty"
-      minlength: "length must be greater than or equal to %{minlength}"
-      maxlength: "length must be smaller than or equal to %{maxlength}"
+      minlength: "length must be at least %{minlength}"
+      maxlength: "length must be at most %{maxlength}"
       format: "must have format %{regex}"
     documentation:
       params_header: Request params
