--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,9 @@ en:
       hash_key: "invalid key (%{key}): %{error}"
       hash_value: "invalid value at key (%{key}): %{error}"
       enum: "must be one of: %{allowed_values}"
+      file: "must be a file"
+      file_maxsize: "must be smaller than %{maxsize} bytes"
+      file_mime: "file mime type must be one of: %{allowed_mimes}"
       integer: "must be an integer"
       min: "must be at least %{min}"
       max: "must be at most %{max}"
