rename file options from maxsize,mime -> max_size,content_type

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,8 +12,8 @@ en:
       hash_value: "invalid value at key (%{key}): %{error}"
       enum: "must be one of: %{allowed_values}"
       file: "must be a file"
-      file_maxsize: "must be smaller than %{maxsize} bytes"
-      file_mime: "file mime type must be one of: %{allowed_mimes}"
+      file_max_size: "must be smaller than %{max_size} bytes"
+      file_content_type: "file content type must be one of: %{allowed_content_types}"
       integer: "must be an integer"
       min: "must be at least %{min}"
       max: "must be at most %{max}"
