--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,7 +12,7 @@ en:
       hash_value: "invalid value at key (%{key}): %{error}"
       enum: "must be one of: %{allowed_values}"
       file: "must be a file"
-      file_max_size: "must be smaller than %{max_size} bytes"
+      file_max_size: "must be smaller than %{max_size}"
       file_content_type: "file content type must be one of: %{allowed_content_types}"
       integer: "must be an integer"
       min: "must be at least %{min}"
@@ -25,3 +25,8 @@ en:
       minlength: "length must be at least %{minlength}"
       maxlength: "length must be at most %{maxlength}"
       format: "must have format %{regex}"
+    swagger:
+      integer_not_positive: "Must not be positive"
+      integer_only_positive: "Must be positive"
+      integer_not_negative: "Must not be negative"
+      integer_only_negative: "Must be negative"
