move swagger messages to i18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,14 @@ en:
       maxlength: "length must be at most %{maxlength}"
       format: "must have format %{regex}"
     swagger:
+      agreement: "* Must be accepted (true)"
+      big_decimal_min: "* Minimum: %{min}"
+      big_decimal_max: "* Maximum: %{max}"
+      date_time_iso8601: "* Must be valid according to ISO 8601"
+      date_time_posix: "* POSIX time or Unix epoch is the amount of seconds since 1970-01-01"
+      file_max_size: "* Max size: %{max_size}"
+      file_content_types: "* Content types: %{content_types}"
+      hash_not_empty: "* Must have at least one value"
       integer_not_positive: "Must not be positive"
       integer_only_positive: "Must be positive"
       integer_not_negative: "Must not be negative"
