--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,7 +34,9 @@ en:
       file_max_size: "* Max size: %{max_size}"
       file_content_types: "* Content types: %{content_types}"
       hash_not_empty: "* Must have at least one value"
-      integer_not_positive: "Must not be positive"
-      integer_only_positive: "Must be positive"
-      integer_not_negative: "Must not be negative"
-      integer_only_negative: "Must be negative"
+      integer_not_positive: "* Must not be positive"
+      integer_only_positive: "* Must be positive"
+      integer_not_negative: "* Must not be negative"
+      integer_only_negative: "* Must be negative"
+      string_not_empty: "* Must not be empty"
+      string_downcase: "* Case insensitive"
