--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,7 +12,7 @@ en:
       hash_value: "invalid value at key (%{key}): %{error}"
       enum: "must be one of: %{allowed_values}"
       file: "must be a file"
-      file_max_size: "must be smaller than %{max_size} bytes"
+      file_max_size: "must be smaller than %{max_size}"
       file_content_type: "file content type must be one of: %{allowed_content_types}"
       integer: "must be an integer"
       min: "must be at least %{min}"
@@ -25,3 +25,18 @@ en:
       minlength: "length must be at least %{minlength}"
       maxlength: "length must be at most %{maxlength}"
       format: "must have format %{regex}"
+    swagger:
+      agreement: "* Must be accepted (true)"
+      big_decimal_min: "* Minimum: %{min}"
+      big_decimal_max: "* Maximum: %{max}"
+      date_time_iso8601: "* Must be valid according to ISO 8601"
+      date_time_posix: "* POSIX time or Unix epoch is the amount of seconds since 1970-01-01"
+      file_max_size: "* Max size: %{max_size}"
+      file_content_types: "* Content types: %{content_types}"
+      hash_not_empty: "* Must have at least one value"
+      integer_not_positive: "* Must not be positive"
+      integer_only_positive: "* Must be positive"
+      integer_not_negative: "* Must not be negative"
+      integer_only_negative: "* Must be negative"
+      string_not_empty: "* Must not be empty"
+      string_downcase: "* Case insensitive"
