--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,11 +7,17 @@ en:
       big_decimal: "must be a string-encoded decimal number"
       boolean: "must be a boolean"
       date_range_format: 'must be a string in the format of "YYYY-MM-DD..YYYY-MM-DD"'
-      date_range_min_date: "starting date cannot be before %{min_date}"
-      date_range_max_date: "end date cannot be after %{max_date}"
-      date_range_min_range: "date range cannot be smaller than %{min_range}"
-      date_range_max_range: "date range cannot be larger than %{max_range}"
-      date_time_iso8601: "must be a valid iso8601 date time"
+      date_range_min_date: "starting date must not be a day before %{min_date}"
+      date_range_max_date: "ending date must not be a day after %{max_date}"
+      date_range_min_range: "must not be less than %{min_range}"
+      date_range_max_range: "must not be more than %{max_range}"
+      date_time_iso8601_range_format: 'must be a string in the format of: "YYYY-MM-DDTHH:MM:SS..YYYY-MM-DDTHH:MM:SS"'
+      date_time_iso8601_range_inverted: "starting datetime must be a moment before ending datetime"
+      date_time_iso8601_range_min_date_time: "starting datetime must not be a moment before %{min_date_time}"
+      date_time_iso8601_range_max_date_time: "ending datetime must not be a moment after %{max_date_time}"
+      date_time_iso8601_range_min_range: "must not be less than %{min_range}"
+      date_time_iso8601_range_max_range: "must not be more than %{max_range}"
+      date_time_iso8601: "must be a valid datetime according to ISO8601"
       date_time_posix: "must be a valid posix timestamp"
       hash: "must be an object"
       hash_key: "invalid key (%{key}): %{error}"
@@ -36,10 +42,12 @@ en:
       agreement: "* Must be accepted (true)"
       big_decimal_min: "* Minimum: %{min}"
       big_decimal_max: "* Maximum: %{max}"
-      date_range: '* A date followed by two dots then another date: "YYYY-MM-DD..YYYY-MM-DD"'
-      date_range_between_range: "* The date range must be between %{min_range} and %{max_range}"
-      date_range_min_range: "* The date range must be larger than %{min_range}"
-      date_range_max_range: "* The date range must be smaller than %{max_range}"
+      date_range: '* The value must be a range between two dates in the format of: "YYYY-MM-DD..YYYY-MM-DD"'
+      date_range_min_range: "* The range must not be less than %{min_range}"
+      date_range_max_range: "* The range must not be more than %{max_range}"
+      date_time_iso8601_range: '* The value must be a range between two date times in the format of: "YYYY-MM-DDTHH:MM:SS..YYYY-MM-DDTHH:MM:SS"'
+      date_time_iso8601_range_min_range: "* The range must not be less than %{min_range}"
+      date_time_iso8601_range_max_range: "* The range must not be more than %{max_range}"
       date_time_iso8601: "* Must be valid according to ISO 8601"
       date_time_posix: "* POSIX time or Unix epoch is the amount of seconds since 1970-01-01"
       file_max_size: "* Max size: %{max_size}"
