add min and max options to date times (fixes #30)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,7 +19,11 @@ en:
       date_time_iso8601_range_min_range: "must not be less than %{min_range}"
       date_time_iso8601_range_max_range: "must not be more than %{max_range}"
       date_time_iso8601: "must be a valid datetime according to ISO8601"
+      date_time_iso8601_min: "must not be a moment before %{min}"
+      date_time_iso8601_max: "must not be a moment after %{max}"
       date_time_posix: "must be a valid posix timestamp"
+      date_time_posix_min: "must not be a moment before %{min}"
+      date_time_posix_max: "must not be a moment after %{max}"
       hash: "must be an object"
       hash_key: "invalid key (%{key}): %{error}"
       hash_value: "invalid value at key (%{key}): %{error}"
