rename date_time_posix to date_time_unix_epoch (fixes #32)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,9 +21,9 @@ en:
       date_time_iso8601: "must be a valid datetime according to ISO8601"
       date_time_iso8601_min: "must not be a moment before %{min}"
       date_time_iso8601_max: "must not be a moment after %{max}"
-      date_time_posix: "must be a valid posix timestamp"
-      date_time_posix_min: "must not be a moment before %{min}"
-      date_time_posix_max: "must not be a moment after %{max}"
+      date_time_unix_epoch: "must be a valid posix timestamp"
+      date_time_unix_epoch_min: "must not be a moment before %{min}"
+      date_time_unix_epoch_max: "must not be a moment after %{max}"
       hash: "must be an object"
       hash_key: "invalid key (%{key}): %{error}"
       hash_value: "invalid value at key (%{key}): %{error}"
@@ -54,7 +54,7 @@ en:
       date_time_iso8601_range_min_range: "* The range must not be less than %{min_range}"
       date_time_iso8601_range_max_range: "* The range must not be more than %{max_range}"
       date_time_iso8601: "* Must be valid according to ISO 8601"
-      date_time_posix: "* POSIX time or Unix epoch is the amount of seconds since 1970-01-01"
+      date_time_unix_epoch: "* POSIX time or Unix epoch is the amount of seconds since 1970-01-01"
       file_max_size: "* Max size: %{max_size}"
       file_content_types: "* Content types: %{content_types}"
       hash_not_empty: "* Must have at least one value"
