fully support negative and positive variations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,7 +39,9 @@ en:
       min: "must be at least %{min}"
       max: "must be at most %{max}"
       not_negative: "must not be negative"
+      only_negative: "must be negative"
       not_positive: "must not be positive"
+      only_positive: "must be positive"
       literal: "must be %{value}"
       one_of_separator: "OR"
       string: "must be a string"
