--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,11 +34,14 @@ en:
       file: "must be a file"
       file_max_size: "must be smaller than %{max_size}"
       file_content_type: "file content type must be one of: %{allowed_content_types}"
+      float: "must be a number"
       integer: "must be an integer"
       min: "must be at least %{min}"
       max: "must be at most %{max}"
       not_negative: "must not be negative"
+      only_negative: "must be negative"
       not_positive: "must not be positive"
+      only_positive: "must be positive"
       literal: "must be %{value}"
       one_of_separator: "OR"
       string: "must be a string"
@@ -61,9 +64,9 @@ en:
       file_max_size: "* Max size: %{max_size}"
       file_content_types: "* Content types: %{content_types}"
       hash_not_empty: "* Must have at least one value"
-      integer_not_positive: "* Must not be positive"
-      integer_only_positive: "* Must be positive"
-      integer_not_negative: "* Must not be negative"
-      integer_only_negative: "* Must be negative"
+      number_not_positive: "* Must not be positive"
+      number_only_positive: "* Must be positive"
+      number_not_negative: "* Must not be negative"
+      number_only_negative: "* Must be negative"
       string_not_empty: "* Must not be empty"
       string_downcase: "* Case insensitive"
