--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,6 +51,7 @@ en:
       format: "must have format %{regex}"
     swagger:
       agreement: "* Must be accepted (true)"
+      big_decimal_format: "* String-encoded decimal number. For example: '123.45'"
       big_decimal_min: "* Minimum: %{min}"
       big_decimal_max: "* Maximum: %{max}"
       date_range: '* The value must be a range between two dates in the format of: "YYYY-MM-DD..YYYY-MM-DD"'
